--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
-  font-family: "Roboto", "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #fff;
-  color: #2e2f42;
+  color: #434455;
 }
 
 ul {
@@ -13,23 +13,28 @@ a {
   font-style: normal;
 }
 
-.highlight {
-  color: #4d5ae5;
+.logo-link-black {
+  color: #2e2f42;
 }
+
+.logo-link-white {
+  color: #f4f4fd;
+}
+
 
 /*--------------------------- HEADER ------------------------*/
 
 .header-nav {
 }
 
-.black-logo-link {
+.logo-link {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: #4d5ae5;
 }
 
 .header-list {
@@ -43,6 +48,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .header-list-link:hover {
@@ -58,6 +64,7 @@ a {
 }
 
 .header-address {
+font-style: normal;
 }
 
 .header-address-list {
@@ -103,6 +110,8 @@ a {
 }
 
 .main-title-btn {
+  font-family: "Roboto", sans-serif;
+  background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -110,6 +119,14 @@ a {
   color: #fff;
   cursor: pointer;
 }
+.main-title-btn:hover {
+background-color: #404BBF;
+}
+
+.main-title-btn:focus {
+  background-color: #404BBF;
+}
+
 /*--------------------------- MAIN-SECTION (1) END ------------------------*/
 
 /*--------------------------- ADVANTAGES SECTION (2) ------------------------*/
@@ -142,10 +159,11 @@ a {
 
 /*--------------------------- TEAM SECTION (3) ------------------------*/
 .team {
-  background-color: #f4f4fd;
+  background-color: #FFFFFF ;
 }
 
 .team-title {
+  text-transform: capitalize;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -179,31 +197,6 @@ a {
 }
 
 /*--------------------------- TEAM SECTION (3) END ------------------------*/
-
-/*--------------------------- FOOTER ------------------------*/
-
-footer {
-  background-color: #2e2f42;
-}
-
-.white-logo-link {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #f4f4fd;
-}
-
-.footer-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-}
-
-/*--------------------------- FOOTER END ------------------------*/
 
 /*--------------------------- PORTFOLIO ------------------------*/
 
@@ -240,3 +233,22 @@ footer {
   letter-spacing: 0.02em;
   color: #434455;
 }
+
+/*--------------------------- PORTFOLIO END ------------------------*/
+
+/*--------------------------- FOOTER ------------------------*/
+
+footer {
+  background-color: #2e2f42;
+}
+
+.footer-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+
+/*--------------------------- FOOTER END ------------------------*/
+
+
