--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,6 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 
 .header-address-link:hover {
@@ -143,13 +142,13 @@ a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .advantages-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 
 .advantages-item-list {
@@ -158,7 +157,7 @@ a {
 
 /*--------------------------- TEAM SECTION (3) ------------------------*/
 .team {
-  background-color: #ffffff;
+  background-color: #F4F4FD;
 }
 
 .team-title {
@@ -168,12 +167,15 @@ a {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  color: #2e2f42;
 }
 
 .team-list {
+
 }
 
 .team-list-item {
+  background-color: #FFFFFF;
 }
 
 .team-list-img {
@@ -185,6 +187,7 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
+  color: #2e2f42;
 }
 
 .team-list-text {
@@ -192,7 +195,6 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #434455;
 }
 
 /*--------------------------- TEAM SECTION (3) END ------------------------*/
@@ -230,7 +232,6 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 
 /*--------------------------- PORTFOLIO END ------------------------*/
