--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: #434455;
 }
 
 .header-list-link:hover {
@@ -199,7 +199,7 @@ a {
 
 /*--------------------------- TEAM SECTION (3) END ------------------------*/
 
-/*--------------------------- PORTFOLIO ------------------------*/
+/*--------------------------- PORTFOLIO SECTION (4) ------------------------*/
 
 .portfolio {
 }
@@ -210,6 +210,8 @@ a {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42; 
 }
 
 .portfolio-list {
@@ -226,6 +228,7 @@ a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .portfolio-list-text {
@@ -234,7 +237,7 @@ a {
   letter-spacing: 0.02em;
 }
 
-/*--------------------------- PORTFOLIO END ------------------------*/
+/*--------------------------- PORTFOLIO SECTION (4) END ------------------------*/
 
 /*--------------------------- FOOTER ------------------------*/
 
