--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: #2e2f42;
 }
 
 .header-list-link:hover {
@@ -77,6 +77,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #434455 ;
 }
 
 .header-address-link:hover {
