--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,34 @@ body {
   color: #434455;
 }
 
+.container {
+  width: 1440px;
+  margin: 0 auto;
+  padding-left: 156px;
+  padding-right: 156px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 auto;
+}
+
+p {
+  margin: 0 auto;
+}
+
+img {
+  display: block;
+}
+
 ul {
   list-style-type: none;
+  margin: 0 auto;
+  padding-left: 0;
 }
 
 a {
@@ -23,8 +49,21 @@ a {
 
 /*--------------------------- HEADER ------------------------*/
 
-.header-nav {
+.header-container {
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  align-items: center;
 }
+
+
+
+.header-nav {
+  display: flex;
+  flex-grow: 1;
+}
+
+
 
 .logo-link {
   font-family: "Raleway", sans-serif;
@@ -37,10 +76,14 @@ a {
 }
 
 .header-list {
+  display: flex;
+  gap: 40px;
+  margin-left: 76px;
 }
 
 .header-list-item {
-}
+
+} 
 
 .header-list-link {
   font-weight: 500;
@@ -63,10 +106,12 @@ a {
 }
 
 .header-address {
-  font-style: normal;
+  font-style: normal; 
 }
 
 .header-address-list {
+  display: flex;
+  gap: 40px;
 }
 
 .header-address-item {
@@ -77,7 +122,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455 ;
+  color: #434455;
 }
 
 .header-address-link:hover {
@@ -97,6 +142,8 @@ a {
 /*--------------------------- MAIN-SECTION (1) ------------------------*/
 .main-section {
   background-color: #2e2f42;
+  height: 600px;
+  padding: 188px 0 0;
 }
 
 .main-title {
@@ -106,6 +153,8 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
+  margin: 0 auto 48px auto;
 }
 
 .main-title-btn {
@@ -117,6 +166,10 @@ a {
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  border-radius: 4px;
+  padding: 16px 32px;
 }
 .main-title-btn:hover {
   background-color: #404bbf;
@@ -130,9 +183,15 @@ a {
 
 /*--------------------------- ADVANTAGES SECTION (2) ------------------------*/
 .advantages {
+  display: flex;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .advantages-list {
+  display: flex;
+  max-width: 1128px;
+  gap: 24px;
 }
 
 .advantages-list-item {
@@ -144,6 +203,8 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: flex;
+  margin-bottom: 8px;
 }
 
 .advantages-text {
@@ -158,7 +219,10 @@ a {
 
 /*--------------------------- TEAM SECTION (3) ------------------------*/
 .team {
-  background-color: #F4F4FD;
+  background-color: #f4f4fd;
+  display: flex;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team-title {
@@ -172,11 +236,14 @@ a {
 }
 
 .team-list {
-
+  display: flex;
+  gap: 24px;
+  margin-top: 72px;
 }
 
 .team-list-item {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
+  display: block;
 }
 
 .team-list-img {
@@ -189,6 +256,9 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  display: flex;
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 .team-list-text {
@@ -212,7 +282,7 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-  color: #2e2f42; 
+  color: #2e2f42;
 }
 
 .portfolio-list {
