--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,9 @@ a {
 /*--------------------------- PORTFOLIO SECTION (4) ------------------------*/
 
 .portfolio {
+  display: flex;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .portfolio-title {
@@ -286,6 +289,10 @@ a {
 }
 
 .portfolio-list {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+  margin-top: 72px;
 }
 
 .portfolio-list-item {
@@ -300,6 +307,9 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: flex;
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 .portfolio-list-text {
@@ -314,6 +324,10 @@ a {
 
 .footer {
   background-color: #2e2f42;
+  height: 312px;
+  display: flex;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-text {
@@ -321,6 +335,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
 
 /*--------------------------- FOOTER END ------------------------*/
