--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,6 @@ h6 {
   margin: 0 auto;
 }
 
-p {
-  margin: 0 auto;
-}
-
 img {
   display: block;
 }
@@ -218,7 +214,6 @@ a {
 /*--------------------------- TEAM SECTION (3) ------------------------*/
 .team {
   background-color: #f4f4fd;
-  display: flex;
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -239,9 +234,13 @@ a {
   margin-top: 72px;
 }
 
+.team-list-div {
+ margin-top: 32px;
+ margin-bottom: 32px;
+}
+
 .team-list-item {
   background-color: #ffffff;
-  display: block;
 }
 
 .team-list-img {
@@ -254,9 +253,6 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  display: flex;
-  margin-top: 32px;
-  margin-bottom: 8px;
 }
 
 .team-list-text {
@@ -323,7 +319,6 @@ a {
 .footer {
   background-color: #2e2f42;
   height: 312px;
-  display: flex;
   padding-top: 100px;
   padding-bottom: 100px;
 }
