--- a/css/styles.css
+++ b/css/styles.css
@@ -297,8 +297,8 @@ a {
   letter-spacing: 0.02em;
   color: #2e2f42;
   display: flex;
-  margin-top: 32px;
-  margin-bottom: 8px;
+  padding-top: 32px;
+  padding-bottom: 8px;
 }
 
 .portfolio-list-text {
