--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,8 @@ a {
 
 .team-list-div {
   margin-top: 32px;
-  margin-bottom: 32px;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
 }
 
 .team-list-item {
@@ -272,6 +273,7 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-list-text {
@@ -302,18 +304,19 @@ a {
 
 .portfolio-list {
   display: flex;
-  gap: 24px;
   flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-div {
   border-bottom: 1px solid #e7e9fc;
 border-left: 1px solid #e7e9fc;
 border-right: 1px solid #e7e9fc;
+padding: 32px 16px;
 }
 
 .portfolio-list-item {
-
 }
 
 .portfolio-list-img {
@@ -326,8 +329,7 @@ border-right: 1px solid #e7e9fc;
   letter-spacing: 0.02em;
   color: #2e2f42;
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .portfolio-list-text {
@@ -353,6 +355,11 @@ border-right: 1px solid #e7e9fc;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-logo-link {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 /*--------------------------- FOOTER END ------------------------*/
