--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ a {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
+
 }
 
 .header-list {
@@ -82,8 +83,8 @@ a {
 }
 
 .header-list-item {
-  margin-top: 24px;
-  margin-bottom: 24px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-list-link {
@@ -254,8 +255,8 @@ a {
 
 .team-list-div {
   margin-top: 32px;
-  border-radius: 0 0 4px 4px;
-  padding: 0px 0px 32px 0px;
+  border-radius: 0px 0px 4px 4px;
+  padding: 32px 0;
 }
 
 .team-list-item {
@@ -360,6 +361,13 @@ a {
 .footer-logo-link {
   display: inline-block;
   margin-bottom: 16px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
 /*--------------------------- FOOTER END ------------------------*/
