--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,21 @@ a {
 }
 
 .header-list-item {
+}
 
+.current {
+  position: relative;
+}
+
+.current::after {
+  position: absolute;
+content: "";
+border-radius: 2px;
+height: 4px;
+background-color: #404bbf;
+left: 0;
+bottom: -1px;
+width: 100%;
 }
 
 .header-list-link {
@@ -106,10 +120,6 @@ a {
 
 .header-list-link:active {
   color: #404bbf;
-}
-
-.header-list-link:active::after {
-  background-image: url(../images/icons.svg#icon-hover);
 }
 
 .header-list-link:focus {
@@ -228,9 +238,21 @@ a {
   width: calc((100% - 3 * 24px) / 4);
 }
 
-.advantages-list-item::before {
-  background-image: url(../images/icons.svg#icon-antenna-1);
-  content: "";
+.svg-advantages {
+ width: 64px;
+ height: 64px;
+}
+
+.svg-advantages-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background: #f4f4fd;
+  margin-bottom: 8px;
 }
 
 .advantages-title {
@@ -279,6 +301,7 @@ a {
   background-color: #ffffff;
   width: calc((100% - 3 * 24px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-list-img {
@@ -305,6 +328,8 @@ a {
   display: flex;
   justify-content: center;
   gap: 24px;
+  margin-top: 8px;
+  margin-bottom: 32px;
 }
 
 .team-soc-link {
@@ -315,15 +340,21 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 200ms ease-in;
 }
 
 .team-link-icon {
-  fill: #111;
+  fill: #f4f4fd;
 }
 
 .team-soc-item {
   width: 40px;
   height: 40px;
+  
+}
+
+.team-soc-item:hover .team-soc-link {
+  background-color: #404bbf;;
 }
 
 /*--------------------------- TEAM SECTION (3) END ------------------------*/
@@ -422,12 +453,21 @@ padding-right: 32px;
   padding-bottom: 100px;
 }
 
+.footer-promo {
+  display: block;
+}
+
 .footer-text {
+  display: block;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-div {
+  display: flex;
 }
 
 .footer-logo-link {
@@ -440,6 +480,48 @@ padding-right: 32px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+}
+
+.footer-title {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+}
+
+.footer-soc {
+  margin-left: 120px;
+}
+
+.footer-soc-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.footer-cos-item {
+}
+
+.footer-soc-link {
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 16px;
+  transition: background-color 500ms  ease-in-out;
+}
+
+.footer-soc-link:hover {
+  background-color: #31d0aa;
+}
+
+.footer-soc-icon {
+  fill: #f4f4fd;
 }
 
 /*--------------------------- FOOTER END ------------------------*/
