--- a/css/styles.css
+++ b/css/styles.css
@@ -422,11 +422,15 @@ a {
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  transition: transform, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background: #4d5ae5;
   width: 360px;
   height: 300px;
   padding: 40px 32px;
+}
+
+.portfolio-list-item {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover .overlay-text {
