--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ img {
 
 ul {
   list-style-type: none;
-  margin: 0 auto;
+  margin: 0;
   padding-left: 0;
 }
 
@@ -85,9 +85,7 @@ a {
 .header-list-item {
 }
 
-.current {
-  position: relative;
-}
+
 
 .current::after {
   position: absolute;
@@ -105,11 +103,16 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #404bbf;
-  display: flex;
+  color: #2e2f42;
+  display: block;
   padding-top: 24px;
   padding-bottom: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current {
+  position: relative;
+  color: #404bbf;
 }
 
 .svg-hover {
@@ -178,6 +181,8 @@ a {
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main-title {
@@ -338,7 +343,6 @@ a {
   justify-content: center;
   gap: 24px;
   margin-top: 8px;
-  margin-bottom: 32px;
 }
 
 .team-soc-link {
@@ -513,7 +517,6 @@ a {
 }
 
 .footer-soc {
-  margin-left: 120px;
 }
 
 .footer-soc-list {
@@ -549,3 +552,181 @@ a {
 }
 
 /*--------------------------- FOOTER END ------------------------*/
+
+/*--------------------------- BACKDROP ------------------------*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+  z-index: 999;
+  opacity: 1;
+  pointer-events: all;
+}
+
+.is-open {
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  border-radius: 4px;
+  width: 408px;
+  min-height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+background: #fcfcfc;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+width: 24px;
+height: 24px;
+padding: 0;
+cursor: pointer;
+background-color: #e7e9fc;
+display: flex;
+justify-content: center;
+align-items: center;
+transition: fill, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon {
+  fill: #2e2f42;
+}
+
+.modal-close-btn:hover > .modal-close-icon {
+  fill: #fff;
+}
+
+.modal-close-btn:hover {
+  background-color: #404bbf;;
+}
+
+
+.modal-title {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-right: 24px;
+margin-left: 24px;
+margin-top: 72px;
+}
+
+.modal-form-box {
+  margin-top: 16px;
+  margin-left: 24px;
+  display: flex;
+  align-items: flex-start;
+justify-content: flex-start;
+flex-direction: column;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.16667;
+letter-spacing: 0.04em;
+color: #8e8f99;
+}
+
+.modal-form {
+
+}
+
+.modal-input-name {
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+width: 360px;
+height: 40px;
+margin-top: 4px;
+padding-left: 38px;
+outline: none;
+}
+
+.modal-input-name:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.modal-form-svg {
+  position: absolute;
+  margin-top: 29px;
+  margin-left: 19px;
+  fill: #2e2f42;
+}
+
+.modal-input-name:focus .modal-form-svg {
+  fill: #4d5ae5;
+}
+
+.modal-input-comment {
+  margin-top: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 360px;
+  height: 120px;
+  padding-left: 16px;
+  padding-top: 8px;
+}
+
+textarea::placeholder {
+font-weight: 400;
+font-size: 12px;
+line-height: 1.16667;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+}
+
+.form-checkbox {
+  font-weight: 400;
+font-size: 12px;
+line-height: 1.16667;
+letter-spacing: 0.04em;
+color: #8e8f99;
+margin-top: 16px;
+margin-left: 24px;
+}
+
+.privacy-policy-link {
+  line-height: 1.33;
+text-decoration: underline;
+text-decoration-skip-ink: none;
+color: #4d5ae5;
+}
+
+.form-btn {
+  border-radius: 4px;
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+  cursor: pointer;
+ margin: 24px auto;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+ border: 1px solid rgba(0, 0, 0, 0.15);
+background: #4d5ae5;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+color: #fff;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn:hover {
+  background-color: #404bbf;
+}
+
+/*--------------------------- BACKDROP END ------------------------*/
