--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,7 @@ a {
   min-height: 584px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
 background: #fcfcfc;
+padding: 72px 24px 24px 24px;
 }
 
 .modal-close-btn {
@@ -597,19 +598,25 @@ background-color: #e7e9fc;
 display: flex;
 justify-content: center;
 align-items: center;
-transition: fill, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-icon {
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover > .modal-close-icon {
   fill: #fff;
 }
 
-.modal-close-btn:hover {
-  background-color: #404bbf;;
+.modal-close-btn:focus > .modal-close-icon {
+  fill: #fff;
+}
+
+.modal-close-btn:hover, .modal-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
 }
 
 
@@ -620,48 +627,55 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-margin-right: 24px;
-margin-left: 24px;
-margin-top: 72px;
+margin-bottom: 16px;
 }
 
 .modal-form-box {
-  margin-top: 16px;
-  margin-left: 24px;
   display: flex;
   align-items: flex-start;
 justify-content: flex-start;
 flex-direction: column;
 font-weight: 400;
 font-size: 12px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.04em;
 color: #8e8f99;
+margin-bottom: 8px;
 }
 
 .modal-form {
+}
 
+.modal-form-div {
+  position: relative;
+}
+
+.form-label {
+  margin-bottom: 4px;
 }
 
 .modal-input-name {
 border: 1px solid rgba(46, 47, 66, 0.4);
 border-radius: 4px;
-width: 360px;
+width: 100%;
 height: 40px;
-margin-top: 4px;
 padding-left: 38px;
-outline: none;
+outline: transparent;
+background-color: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-name:focus {
-  border: 1px solid #4d5ae5;
+  border-color: #4D5AE5;
 }
 
 .modal-form-svg {
   position: absolute;
-  margin-top: 29px;
-  margin-left: 19px;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: 16px;
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-name:focus .modal-form-svg {
@@ -676,12 +690,17 @@ outline: none;
   height: 120px;
   padding-left: 16px;
   padding-top: 8px;
+  outline: none;
+}
+
+.modal-input-comment:focus {
+  border: 1px solid #4d5ae5;
 }
 
 textarea::placeholder {
 font-weight: 400;
 font-size: 12px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.04em;
 color: rgba(46, 47, 66, 0.4);
 }
@@ -714,15 +733,15 @@ color: #4d5ae5;
  justify-content: center;
  align-items: center;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
- border: 1px solid rgba(0, 0, 0, 0.15);
+ border: none;
 background: #4d5ae5;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 text-align: center;
-color: #fff;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+color: #ffffff;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 .form-btn:hover {
