--- a/css/styles.css
+++ b/css/styles.css
@@ -551,6 +551,82 @@ a {
   fill: #f4f4fd;
 }
 
+.subscribe-div {
+  margin-left: 80px;
+}
+
+.footer-form-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+}
+
+.footer-form {
+}
+
+.footer-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.footer-input {
+border: 1px solid #fff;
+border-radius: 4px;
+width: 264px;
+height: 40px;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+margin-right: 24px;
+background-color: transparent;
+padding-left: 16px;
+color: #fff;
+}
+
+.footer-input::placeholder {
+font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: #fff;
+}
+
+.footer-btn {
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: row;
+border-radius: 4px;
+padding: 8px 24px;
+width: 165px;
+height: 40px;
+background-color: #4d5ae5;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+color: #fff;
+padding-top: 8px;
+padding-bottom: 8px;
+border: none;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+cursor: pointer;
+}
+
+.footer-btn:hover {
+  background-color: #404bbf;
+}
+
+.footer-svg-send {
+  margin-left: 16px;
+  fill: #fff;
+}
+
+
 /*--------------------------- FOOTER END ------------------------*/
 
 /*--------------------------- BACKDROP ------------------------*/
@@ -563,11 +639,13 @@ a {
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
   z-index: 999;
-  opacity: 1;
-  pointer-events: all;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .is-open {
+  opacity: 1;
+  pointer-events: all;
 }
 
 .modal {
@@ -679,7 +757,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input-name:focus .modal-form-svg {
+.modal-input-name:focus + svg {
   fill: #4d5ae5;
 }
 
