--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,7 @@ img {
   display: none;
   align-items: center;
   justify-content: center;
+  border: 1px solid #8e8f99;
   border-radius: 4px;
   background-color: #f4f4fd;
   margin-bottom: 8px;
@@ -806,6 +807,8 @@ img {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -917,6 +920,7 @@ img {
 }
 
 .modal-input:focus {
+  border-color: #4d5ae5;
 }
 
 .modal-input:focus + .modal-field-icon {
@@ -1186,13 +1190,16 @@ img {
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
-    padding: 15px 0;
+    margin-left: auto;
+    padding: 0 15px;
   }
 
   .header {
+    padding-top: 0;
   }
 
   .header-wrap {
+    justify-content: flex-start;
   }
 
   .header-logo {
